# brickpioneer

./: .gitignore  README.md  pyproject.toml
brickpioneer/: constants.py  helpers.py  main.py  models.py
brickpioneer/scrapers/: __init__.py  aedas.py  base.py  celere.py  habitat.py  metrovacesa.py  neinor.py
brickpioneer/tests/: test_helpers.py  test_scrapers.py
